--- a/package.json
+++ b/package.json
@@ -23,7 +23,18 @@
   },
   "homepage": "https://github.com/wasteiq/sensorAgent#readme",
   "dependencies": {
+    "geolib": "^3.1.0",
+    "monet": "^0.9.0",
     "node-gpsd": "^0.3.0",
     "rxjs": "^6.5.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.5",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.12",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   }
 }
