--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,28 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "attach",
+			"name": "Attach",
+			"port": 9229,
+			"skipFiles": [
+				"<node_internals>/**"
+			]
+		},
+		{
+			"type": "node",
+			"request": "attach",
+			"address": "10.133.148.146",
+			"name": "Attach to raspberry",
+			"port": 9229,
+			"sourceMaps": true,
+			"localRoot": "${workspaceFolder}",
+  			"remoteRoot": "/home/pi/projects/sensorAgent",
+			"skipFiles": [
+				"<node_internals>/**"
+			]
+		},
+		{
 			"name": "DebugTSNodeTest",
 			"type": "node",
 			"request": "attach",
