--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   },
   "homepage": "https://github.com/wasteiq/sensorAgent#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "geolib": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash.memoize": "^4.1.2",
     "monet": "^0.9.0",
+    "mz": "^2.7.0",
     "node-gpsd": "^0.3.0",
     "rxjs": "^6.5.3",
     "serialport": "^8.0.5"
   },
   "devDependencies": {
+    "@types/mz": "^2.7.0",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.12",
